--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "bootstrap": "^3.3.6",
+    "d3": "^3.5.16",
+    "fixed-data-table": "^0.6.0",
+    "lodash": "^4.5.1",
     "react": "^0.14.7",
+    "react-bootstrap": "^0.28.3",
     "react-dom": "^0.14.7"
   }
 }
